# NeuroScope

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: gradient_debugging.py  profiling_example.py  resnet_example.py  simple_mlp.py  transformer_example.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ConnectionStatus.tsx  CustomNode.tsx  ErrorBoundary.tsx  GraphCanvas.tsx  Header.tsx  NodeInspector.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: graphStore.ts
frontend/src/styles/: index.css
neuroscope/: __init__.py  cli.py
neuroscope/core/: __init__.py  graph.py  server.py  tracer.py
neuroscope/tracers/: __init__.py  jax.py  pytorch.py  tensorflow.py
tests/: conftest.py  test_graph.py  test_profiling.py  test_pytorch_tracer.py  test_server.py
