[project]
name = "neuroscope"
version = "0.1.0"
description = "Real-time neural network observability tool for PyTorch, TensorFlow, and JAX"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "NeuroScope Contributors"}]
maintainers = [{name = "NeuroScope Team"}]
requires-python = ">=3.10"
keywords = [
    "neural-network", 
    "debugging", 
    "visualization", 
    "pytorch", 
    "tensorflow", 
    "jax", 
    "observability",
    "deep-learning",
    "machine-learning",
    "model-debugging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
pytorch = ["torch>=2.0"]
tensorflow = ["tensorflow>=2.15"]
jax = ["jax>=0.4", "jaxlib>=0.4"]
all = ["torch>=2.0", "tensorflow>=2.15", "jax>=0.4", "jaxlib>=0.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.urls]
Homepage = "https://github.com/neuroscope/neuroscope"
Documentation = "https://neuroscope.readthedocs.io"
Repository = "https://github.com/neuroscope/neuroscope"
Changelog = "https://github.com/neuroscope/neuroscope/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/neuroscope/neuroscope/issues"

[project.scripts]
neuroscope = "neuroscope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neuroscope"]

[tool.hatch.build.targets.sdist]
include = [
    "neuroscope/",
    "tests/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["neuroscope"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
